--- a/game.html
+++ b/game.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Charlie Charlie</title>
+  <title>Charlie Charlie Game</title>
   <link rel="stylesheet" href="style.css" />
   <style>
     body {
-      background-color: #0a0a0a;
+      background-color: #050505;
       color: #fff;
       font-family: "Poppins", sans-serif;
       text-align: center;
@@ -18,7 +18,63 @@
       font-size: 2rem;
       margin-top: 40px;
       color: #f53636;
-      text-shadow: 0 0 15px #ff0000;
+      text-shadow: 0 0 15px #ff0000, 0 0 25px #660000;
+      animation: flicker 3s infinite;
+    }
+
+    @keyframes flicker {
+      0%, 19%, 21%, 23%, 25%, 54%, 56%, 100% {
+        opacity: 1;
+      }
+      20%, 24%, 55% {
+        opacity: 0.7;
+      }
+    }
+
+    .mist {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      overflow: hidden;
+      z-index: 0;
+    }
+
+    .orb {
+      position: absolute;
+      width: 100px;
+      height: 100px;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.15), transparent);
+      border-radius: 50%;
+      animation: float 12s infinite ease-in-out;
+    }
+
+    .orb:nth-child(1) {
+      left: 10%;
+      top: 30%;
+      animation-delay: 0s;
+    }
+    .orb:nth-child(2) {
+      left: 70%;
+      top: 50%;
+      animation-delay: 4s;
+    }
+    .orb:nth-child(3) {
+      left: 40%;
+      top: 10%;
+      animation-delay: 7s;
+    }
+
+    @keyframes float {
+      0%, 100% {
+        transform: translateY(0);
+        opacity: 0.3;
+      }
+      50% {
+        transform: translateY(-30px);
+        opacity: 0.7;
+      }
     }
 
     .game-container {
@@ -26,6 +82,7 @@
       width: 250px;
       height: 250px;
       margin: 80px auto;
+      z-index: 1;
     }
 
     .pencil {
@@ -43,6 +100,16 @@
 
     .pencil.vertical {
       transform: rotate(90deg);
+      animation: hoverPencil 3s infinite ease-in-out;
+    }
+
+    @keyframes hoverPencil {
+      0%, 100% {
+        transform: translateY(0) rotate(90deg);
+      }
+      50% {
+        transform: translateY(-5px) rotate(90deg);
+      }
     }
 
     .labels {
@@ -89,6 +156,8 @@
       outline: none;
       font-size: 1rem;
       text-align: center;
+      background: rgba(255,255,255,0.1);
+      color: white;
     }
 
     button {
@@ -100,16 +169,27 @@
       border-radius: 6px;
       cursor: pointer;
       font-size: 1rem;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, transform 0.2s;
     }
 
     button:hover {
       background-color: #b52c2c;
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
+  <audio id="bg-sound" loop>
+    <source src="https://cdn.pixabay.com/audio/2022/03/31/audio_712a2636b0.mp3" type="audio/mpeg" />
+  </audio>
+
   <h1>Charlie Charlie Challenge</h1>
+
+  <div class="mist">
+    <div class="orb"></div>
+    <div class="orb"></div>
+    <div class="orb"></div>
+  </div>
 
   <div class="game-container">
     <div class="labels">
@@ -128,6 +208,7 @@
 
   <script>
     const pencil = document.getElementById("pencil-vertical");
+    const sound = document.getElementById("bg-sound");
 
     function askCharlie() {
       const question = document.getElementById("question").value.trim();
@@ -136,16 +217,23 @@
         return;
       }
 
+      // Start spooky background sound
+      sound.play();
+
+      // Random outcome
       const random = Math.random() > 0.5 ? "yes" : "no";
       const angle = random === "yes" ? 45 : -45;
 
-      pencil.style.transform = `rotate(${90 + angle}deg)`;
+      // Spin effect
+      pencil.style.transition = "transform 2s ease-out";
+      pencil.style.transform = `rotate(${90 + (Math.random() * 720 + angle)}deg)`;
 
       setTimeout(() => {
         alert(`Charlie says: ${random.toUpperCase()} 👻`);
-      }, 2200);
+      }, 2500);
     }
   </script>
 </body>
 </html>
+
 
