--- a/game.html
+++ b/game.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Charlie Charlie Game</title>
-  <link rel="stylesheet" href="style.css" />
+
   <style>
     body {
-      background: radial-gradient(circle at center, #111, #000);
+      background: radial-gradient(circle at center, #0a0a0a, #000);
       color: white;
       font-family: "Poppins", sans-serif;
       display: flex;
@@ -16,6 +16,58 @@
       justify-content: center;
       height: 100vh;
       overflow: hidden;
+      position: relative;
+    }
+
+    /* Candle & mist effects */
+    .mist {
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(circle at center, rgba(255,255,255,0.05), transparent 70%);
+      filter: blur(15px);
+      animation: mistMove 10s infinite ease-in-out;
+    }
+
+    @keyframes mistMove {
+      0%, 100% { transform: translateX(0); opacity: 0.6; }
+      50% { transform: translateX(30px); opacity: 1; }
+    }
+
+    .candle {
+      position: absolute;
+      bottom: 10%;
+      width: 20px;
+      height: 60px;
+      background: linear-gradient(to bottom, #ff9a76, #b34a00);
+      border-radius: 5px;
+      animation: flicker 0.15s infinite;
+      box-shadow: 0 0 20px 5px #ff9a76;
+    }
+
+    .candle::before {
+      content: "";
+      position: absolute;
+      top: -25px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 10px;
+      height: 20px;
+      background: radial-gradient(circle, #ffcc33, transparent);
+      border-radius: 50%;
+      animation: flameFlicker 0.3s infinite alternate;
+    }
+
+    .candle.left { left: 20%; }
+    .candle.right { right: 20%; }
+
+    @keyframes flicker {
+      0%, 100% { box-shadow: 0 0 10px 4px #ff9a76; }
+      50% { box-shadow: 0 0 25px 8px #ffb06b; }
+    }
+
+    @keyframes flameFlicker {
+      from { transform: translateX(-50%) scaleY(1); opacity: 1; }
+      to { transform: translateX(-48%) scaleY(1.2); opacity: 0.9; }
     }
 
     h1 {
@@ -23,6 +75,7 @@
       margin-bottom: 20px;
       color: #ff4747;
       text-shadow: 0 0 15px red;
+      z-index: 2;
     }
 
     .board {
@@ -34,6 +87,7 @@
       align-items: center;
       justify-content: center;
       margin-bottom: 30px;
+      z-index: 2;
     }
 
     .board::before, .board::after {
@@ -59,7 +113,7 @@
       background: orange;
       border-radius: 4px;
       transform-origin: center center;
-      transition: transform 1.5s ease-out;
+      transition: transform 2s ease-out;
       box-shadow: 0 0 5px rgba(255,165,0,0.6);
     }
 
@@ -72,6 +126,7 @@
       flex-direction: column;
       align-items: center;
       gap: 10px;
+      z-index: 2;
     }
 
     input {
@@ -80,6 +135,7 @@
       border: none;
       width: 250px;
       font-size: 1em;
+      text-align: center;
     }
 
     button {
@@ -97,13 +153,32 @@
       background: #ff6767;
     }
 
-    p {
+    #response {
       margin-top: 20px;
       color: #ccc;
+      height: 1.5em;
+      z-index: 2;
     }
+
+    @keyframes shake {
+      0%, 100% { transform: rotate(90deg); }
+      25% { transform: rotate(85deg); }
+      50% { transform: rotate(95deg); }
+      75% { transform: rotate(88deg); }
+    }
+
+    @keyframes type {
+      from { width: 0; }
+      to { width: 100%; }
+    }
+
   </style>
 </head>
 <body>
+  <div class="mist"></div>
+  <div class="candle left"></div>
+  <div class="candle right"></div>
+
   <h1>Charlie Charlie Challenge</h1>
   <div class="board">
     <div id="pencil1" class="pencil"></div>
@@ -116,27 +191,41 @@
   </div>
   <p id="response"></p>
 
+  <audio id="creepySound" src="https://cdn.pixabay.com/audio/2021/09/15/audio_b9a82c54fb.mp3"></audio>
+
   <script>
+    function typeText(element, text) {
+      element.innerText = "";
+      let i = 0;
+      const interval = setInterval(() => {
+        element.innerText += text[i];
+        i++;
+        if (i >= text.length) clearInterval(interval);
+      }, 100);
+    }
+
     function askCharlie() {
       const question = document.getElementById('question').value.trim();
       const pencil = document.getElementById('pencil2');
       const response = document.getElementById('response');
+      const sound = document.getElementById('creepySound');
 
       if (!question) {
-        response.innerText = "Please ask a question first.";
+        response.innerText = "Please ask a question first...";
         return;
       }
 
-      response.innerText = "Summoning Charlie...";
-      pencil.style.transform = 'rotate(0deg)';
+      response.innerText = "";
+      pencil.style.animation = "shake 0.1s infinite";
+      sound.play();
 
       setTimeout(() => {
+        pencil.style.animation = "none";
         const answers = ["Yes", "No"];
         const result = answers[Math.floor(Math.random() * answers.length)];
         const rotation = result === "Yes" ? 45 : -45;
-
         pencil.style.transform = `rotate(${rotation}deg)`;
-        response.innerText = `Charlie says: ${result}`;
+        setTimeout(() => typeText(response, `Charlie says: ${result}`), 2000);
       }, 1500);
     }
   </script>
