--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Charlie Charlie Game</title>
+  <title>Charlie Charlie</title>
 
   <style>
     body {
@@ -179,7 +179,7 @@
   <div class="candle left"></div>
   <div class="candle right"></div>
 
-  <h1>Charlie Charlie Challenge</h1>
+  <h1>Charlie Charlie</h1>
   <div class="board">
     <div id="pencil1" class="pencil"></div>
     <div id="pencil2" class="pencil" style="transform: rotate(0deg);"></div>
