Refactor audio handling and button functionality
Updated the button's onclick event to play sound and random background music. Removed redundant audio elements and scripts related to background music and whispers.

--- a/game.html
+++ b/game.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Charlie Charlie Game</title>
+
   <style>
     body {
       background: radial-gradient(circle at center, #0a0a0a, #000);
@@ -200,9 +200,14 @@
 
   <div class="buttons">
     <input id="question" type="text" placeholder="Ask your question..." />
-    <button onclick="askCharlie(playWhisper();)">Ask Charlie</button>
+    <button onclick="askCharlie()sound.play();
+const randomBGmusic = BGmusic[Math.floor(Math.random() * BGmusic.length)];
+setTimeout(() => randomWhisper.play(), 800);
+">Ask Charlie</button>
   </div>
   <p id="response"></p>
+<audio id="BGmusic1" src="BGmusic1.mp3"></audio>
+<audio id="BGmusic2" src="BGmusic2.mp3"></audio>
 
   <audio id="BGmusic3" src="BGmusic3.mp3"></audio>
 
@@ -222,6 +227,11 @@
       const pencil = document.getElementById('pencil2');
       const response = document.getElementById('response');
       const sound = document.getElementById('creepySound');
+      const whispers = [
+  document.getElementById('whisper1'),
+  document.getElementById('whisper2')
+];
+
       const body = document.body;
 
       if (!question) {
@@ -249,45 +259,25 @@
               body.classList.remove('flash');
               body.classList.remove('flicker');
               typeText(response, `Charlie says: ${result}`);
+              const bloodText = document.createElement("div");
+bloodText.innerText = "He’s listening...";
+bloodText.style.position = "absolute";
+bloodText.style.bottom = "10%";
+bloodText.style.color = "rgba(255,0,0,0)";
+bloodText.style.fontSize = "1.5em";
+bloodText.style.transition = "opacity 4s ease";
+bloodText.style.textShadow = "0 0 20px red";
+bloodText.style.zIndex = "3";
+document.body.appendChild(bloodText);
+setTimeout(() => bloodText.style.color = "rgba(255,0,0,0.8)", 200);
+setTimeout(() => bloodText.remove(), 6000);
+
             }, 500);
           }, 300);
         }, 1500);
       }, 1500);
     }
   </script>
-
-<!-- background hum -->
-<audio id="BGmusic3" src="BGmusic3.mp3" loop volume="0.3"></audio>
-
-<!-- whisper effects -->
-<audio id="BGmusic1" src="BGmusic1.mp3"></audio>
-<audio id="BGmusic2" src="BGmusic2.mp3"></audio>
-
-<script>
-const bgHum = document.getElementById('bgHum');
-const whispers = [
-  document.getElementById('BGmusic1'),
-  document.getElementById('BGmusic2')
-];
-
-// start the ambient hum when the page loads
-window.addEventListener('load', () => {
-  bgHum.volume = 0.25;
-  bgHum.play().catch(()=>{});
-});
-
-// randomly play a whisper after each question
-function playWhisper() {
-  const w = BGmusics[Math.floor(Math.random() * BGmusics.length)];
-  w.volume = 0.7;
-  w.currentTime = 0;
-  w.play();
-}
-</script>
-<a href="lore.html"> Read the lore of Charlie </a>
-
 </body>
 </html>
-
-
 
